feat: add user role and update register api

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -30,6 +30,9 @@ spring:
         order_inserts: true
         order_updates: true
 
+auth-service:
+  url: ${AUTH_SERVICE_URL:http://auth-service.commerce.svc.cluster.local}
+
 logging:
   level:
     org.flywaydb: info
