--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,24 @@
 services:
-  db:
-    image: mariadb:11.8.5
-    container_name: user-mariadb
+  app:
+    image: user-service:latest
+    container_name: user-service
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: commerce-user
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: admin1234
+      SPRING_PROFILES_ACTIVE: local
+      SPRING_DATASOURCE_URL: jdbc:mariadb://db:3306/commerce-user
+      SPRING_DATASOURCE_USERNAME: admin
+      SPRING_DATASOURCE_PASSWORD: admin1234
     ports:
-      - "3306:3306"
-    volumes:
-      - ./user_mariadb_data:/var/lib/mysql
+      - "8081:8081"
+    networks:
+      - commerce-net
+    healthcheck:
+      test: [ "CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8081/actuator/health/liveness" ]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+      start_period: 60s
+
+networks:
+  commerce-net:
+    external: true
